--- a/static/less/webapp/styles.less
+++ b/static/less/webapp/styles.less
@@ -191,6 +191,20 @@ hr {
     border-color: @gray;
 }
 
-.modal-backdrop {
-    opacity: .3;
+.modal-backdrop.animation-fade {
+    opacity: .5;
+    transition: opacity .15s linear;
+    
+    &.ng-enter {
+        opacity: 0;
+        &.ng-enter-active {
+            opacity: .5;
+        }
+    }
+    &.ng-leave {
+        opacity: .5;
+        &.ng-leave-active {
+            opacity: 0;
+        }
+    }
 }
