--- a/static/src/css/styles.css
+++ b/static/src/css/styles.css
@@ -8268,6 +8268,19 @@ body {
 hr {
   border-color: #807f88;
 }
-.modal-backdrop {
-  opacity: .3;
+.modal-backdrop.animation-fade {
+  opacity: .5;
+  transition: opacity .15s linear;
+}
+.modal-backdrop.animation-fade.ng-enter {
+  opacity: 0;
+}
+.modal-backdrop.animation-fade.ng-enter.ng-enter-active {
+  opacity: .5;
+}
+.modal-backdrop.animation-fade.ng-leave {
+  opacity: .5;
+}
+.modal-backdrop.animation-fade.ng-leave.ng-leave-active {
+  opacity: 0;
 }
