--- a/static/less/forms.less
+++ b/static/less/forms.less
@@ -91,13 +91,17 @@ input.ng-invalid.ng-dirty {
 
 .access-form-panel {
     .links {
+        .make-sm-column(9);
+        .make-sm-column-offset(3);
+
         a {
             font-weight: bold;
         }
+
     }
 }
 
-.transaction-form {
+.transaction-form, .access-form {
     &.form-horizontal {
         div.form-group {
             .control-label {
