--- a/templates/access/login.html
+++ b/templates/access/login.html
@@ -28,8 +28,8 @@
             {% endfor %}
 
             <div class="form-group {% if form.username.errors %}has-error{% endif %}">
-                <label class="col-lg-3 control-label" for="username">{% trans "Email" %}</label>
-                <div class="col-lg-9 input-icon">
+                <label class="control-label" for="username">{% trans "Email" %}</label>
+                <div class="input-icon">
                     <i class="fa fa-envelope input-icon-prepend"></i>
                     <input
                         type="email"
@@ -45,8 +45,8 @@
             </div>
 
             <div class="form-group {% if form.password.errors %}has-error{% endif %}">
-                <label class="col-lg-3 control-label" for="password">{% trans "Password" %}</label>
-                <div class="col-lg-9 input-icon">
+                <label class="control-label" for="password">{% trans "Password" %}</label>
+                <div class="input-icon">
                     <i class="fa fa-asterisk input-icon-prepend"></i>
                     <input
                         type="password"
@@ -62,7 +62,7 @@
             </div>
 
             <div class="form-group">
-                <div class="col-lg-offset-3 col-lg-9">
+                <div class="actions">
                     <button class="btn btn-primary" type="submit">
                         {% trans "Login" %}
                         <i class="fa fa-check fa-lg"></i>
@@ -73,7 +73,7 @@
 
         <hr>
 
-        <div class="col-lg-offset-3 col-lg-9 links">
+        <div class="links">
             <p><a href="{% url "password_reset_recover" %}">{% trans "Forgot your password?" %}</a></p>
             <p>{% trans "Not a user yet?" %} <a href="{% url "register" %}">{% trans "Sign up here!" %}</a></p>
         </div>
