--- a/templates/access/register.html
+++ b/templates/access/register.html
@@ -10,8 +10,8 @@
         <div class="panel-body">
             <form id="register-form" method="POST" action="{% url "register" %}" class="form-horizontal access-form">{% csrf_token %}
                 <div class="form-group {% if register_form.name.errors %}has-error{% endif %}">
-                    <label class="col-lg-3 control-label" for="name">{% trans "Name" %}</label>
-                    <div class="col-lg-9 input-icon">
+                    <label class="control-label" for="name">{% trans "Name" %}</label>
+                    <div class="input-icon">
                         <i class="fa fa-user input-icon-prepend"></i>
                         <input
                                 type="text"
@@ -26,8 +26,8 @@
                 </div>
 
                 <div class="form-group {% if register_form.email.errors %}has-error{% endif %}">
-                    <label class="col-lg-3 control-label" for="email">{% trans "Email" %}</label>
-                    <div class="col-lg-9 input-icon">
+                    <label class="control-label" for="email">{% trans "Email" %}</label>
+                    <div class="input-icon">
                         <i class="fa fa-envelope input-icon-prepend"></i>
                         <input
                                 type="email"
@@ -42,8 +42,8 @@
                 </div>
 
                 <div class="form-group {% if register_form.password.errors %}has-error{% endif %}">
-                    <label class="col-lg-3 control-label" for="password">{% trans "Password" %}</label>
-                    <div class="col-lg-9 input-icon">
+                    <label class="control-label" for="password">{% trans "Password" %}</label>
+                    <div class="input-icon">
                         <i class="fa fa-asterisk input-icon-prepend"></i>
                         <input
                                 type="password"
@@ -58,8 +58,8 @@
                 </div>
 
                 <div class="form-group {% if register_form.password_confirm.errors %}has-error{% endif %}">
-                    <label class="col-lg-3 control-label" for="password_confirm">{% trans "Confirm password" %}</label>
-                    <div class="col-lg-9 input-icon">
+                    <label class="control-label" for="password_confirm">{% trans "Confirm password" %}</label>
+                    <div class="input-icon">
                         <i class="fa fa-asterisk input-icon-prepend"></i>
                         <input
                                 type="password"
@@ -74,7 +74,7 @@
                 </div>
 
                 <div class="form-group">
-                    <div class="col-lg-offset-3 col-lg-9">
+                    <div class="actions">
                         <button type="submit" value="{% trans "Sign up" %}" class="btn btn-danger">
                             {% trans "Sign up" %}
                             <i class="fa fa-user"></i>
@@ -86,7 +86,7 @@
 
             <hr>
 
-            <div class="col-lg-offset-3 col-lg-9 links">
+            <div class="links">
                 <p>{% trans "Already a user?" %} <a href="{% url "login" %}">{% trans "Sign in" %}</a></p>
             </div>
         </div>
