--- a/templates/webapp/transactions/transaction-edit.html
+++ b/templates/webapp/transactions/transaction-edit.html
@@ -54,7 +54,7 @@
                                     /></div>
                         </div>
 
-                        <div class="form-group">
+                        <div class="form-group" ng-show="is_installment">
                             <label class="control-label">{% trans "Parcela" %}</label>
                             <div>
                                 <p class="form-control-static" ng-bind="formData.installment_data"></p>
