--- a/templates/webapp/transactions/transaction-form.html
+++ b/templates/webapp/transactions/transaction-form.html
@@ -37,7 +37,7 @@
             </div>
         </div>
 
-        <div class="form-group animate-show animate-show-normal" ng-hide="is_installment">
+        <div class="form-group animate-show animate-show-normal" ng-hide="is_split_transaction">
             <label for="id_value" class="form-label">{% trans "Value" %}</label>
             <div class="input-icon"><i class="fa fa-dollar input-icon-prepend"></i>
             <input
