--- a/templates/webapp/transactions/transaction-edit.html
+++ b/templates/webapp/transactions/transaction-edit.html
@@ -64,7 +64,7 @@
                             </div>
                         </div>
 
-                        <div class="form-group" ng-show="is_installment">
+                        <div class="form-group" ng-show="formData.installment_data">
                             <label class="control-label">{% trans "Parcela" %}</label>
                             <div>
                                 <p class="form-control-static" ng-bind="formData.installment_data"></p>
